policy/kyverno/require-trusted-registry.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-trusted-registry
  annotations:
    policies.kyverno.io/title: Require Trusted Registry
    policies.kyverno.io/category: Supply Chain Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/description: >-
      All container images must be pulled from the organisation's ECR registry.
      Public registries (docker.io, ghcr.io, quay.io) are not permitted.
      Istio sidecar and init containers are explicitly allowed.
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: check-image-registry
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - dev
                - prod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - istio-system
      validate:
        message: >-
          Images must be pulled from the trusted ECR registry:
          444062204470.dkr.ecr.eu-west-1.amazonaws.com
          Public registry images (docker.io, ghcr.io, etc.) are not allowed.
        pattern:
          spec:
            containers:
              - image: "444062204470.dkr.ecr.eu-west-1.amazonaws.com/*"
            =(initContainers):
              - image: "444062204470.dkr.ecr.eu-west-1.amazonaws.com/* | docker.io/istio/* | gcr.io/istio-release/* | *istio*"
